--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,8 @@
 		<%= link_to "Log in", new_user_session_path %>
 		<%= link_to "Register", new_user_registration_path %>
 	<% else %>
-		<%= link_to "Log out", destroy_user_session_path %>
+		<%= link_to "Log out", destroy_user_session_path, :method => "delete" %>
+		<%= link_to "Profile", user_path(current_user) %>
 	<% end %>
 </div>
  <% if notice.present? || alert.present? %>
