--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,10 +1,9 @@
-<p> Hello World! </p>
-<div> 
-<h1> Shoutouts </h1>
-<ul>
-<% @shoutouts.each do |s|%>
-<li> <%= s.comment %> </li>
-<% end %>
-</ul>
-<%= link_to "new shoutout", new_shoutout_path %>
+<div class="container">
+	<h1> Shoutouts </h1>
+	<ul>
+		<% @shoutouts.each do |s|%>
+			<li> <%= s.comment %> </li>
+		<% end %>
+	</ul>
+	<%= link_to "make a shoutout", new_shoutout_path %>
 </div>
