--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,31 @@
-<div id="header-div">
-	<% unless  current_user.present? %>
-		<%= link_to "Log in", new_user_session_path %>
-		<%= link_to "Register", new_user_registration_path %>
-	<% else %>
-		<%= link_to "Log out", destroy_user_session_path, :method => "delete" %>
-		<%= link_to "Profile", user_path(current_user) %>
-	<% end %>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="/"><%= image_tag asset_path "shout-logo.png" %></a>
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="/">Home</a></li>
+				<% if current_user.present? %>
+					<li><%= link_to "Log out", destroy_user_session_path, :method => "delete" %></li>
+					<li><%= link_to "Profile", user_path(current_user) %></li>
+				<% else %>
+					<li><%= link_to "Log in", new_user_session_path %></li>
+					<li><%= link_to "Register", new_user_registration_path %></li>
+				<% end %>
+			</ul>
+		</div><!--/.nav-collapse -->
+	</div>
 </div>
- <% if notice.present? || alert.present? %>
-    <div>
-	  <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    </div>
-  <% end %>
+<% if notice.present? %>
+	<div style="text-align: center;">
+		<p class="notice"><%= notice %></p>
+	</div>
+<% end %>
+<div class="container">
